REQ6 - Monologue Completed and Tested