@@ -4,6 +4,7 @@ import edu.monash.fit2099.engine.actions.Action;
 import edu.monash.fit2099.engine.actors.Actor;
 import edu.monash.fit2099.engine.positions.GameMap;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -27,13 +28,12 @@ public class SpeakAction extends Action {
         int randomIndex = Utils.randomIndexFull();
         boolean flagOneRemoved = true;
 
-        List<String> monologueSentences = Arrays.asList(Monologue.getMonologueSentences());
+        List<String> monologueSentences = new ArrayList<>(List.of(getMonologueSentences()));
 
         // Remove 1st Sentence if Player has Wrench
         for(int i = 0; i < actor.getInventory().size(); i ++){
             if (actor.getInventory().get(i).toString().equals("Wrench")){
-                monologueSentences.remove(Monologue.S1);
-//                System.out.println(monologueSentences);
+                monologueSentences.remove(S1);
                 randomIndex = Utils.randomIndexThree();
                 flagOneRemoved = false;
             }
@@ -41,11 +41,11 @@ public class SpeakAction extends Action {
 
         // Remove 2nd Sentence if Player has Power Star Effect
         if (actor.hasCapability(Status.INVINCIBLE) && !flagOneRemoved){
-            monologueSentences.remove(Monologue.S2);
+            monologueSentences.remove(S2);
             randomIndex = Utils.randomIndexTwo();
         }
         else if(actor.hasCapability(Status.INVINCIBLE)){
-            monologueSentences.remove(Monologue.S2);
+            monologueSentences.remove(S2);
             randomIndex = Utils.randomIndexThree();
         }
 
